Created strong names for all assemblies.  The password for the key is "mistral". : Removed : the reference to Blowfish_net Blowfish_net.dll out of lib Habanero.Base.BlowfishCrypter Habanero.Bo.PasswordBlowfish Habanero.Test.Bo.TestPasswordBlowFish
This was because of Blowfish_NET's license - it's not available for commercial purposes.

Removed: 
reference to MyTimePicker
MyTimePicker.dll out of lib
Habanero.Ui.Forms.TimePickerMapper
Habanero.Test.Ui.BoControls.TestTimePickerMapper

MyTimePicker is not strong-named and thus the project wouldn't build.  I was able to rebuild both Noogen.WinForms.dll and nmock.dll with strong names.

Also managed to get the InternalsVisibleTo attribute working, so now the tests in Habanero.Test.Bo can access internal stuff in Habanero.Bo, so the tests that are in there can be moved out.  Will do this next.

--- a/trunk/Habanero.Base/Habanero.Base.csproj
+++ b/trunk/Habanero.Base/Habanero.Base.csproj
@@ -11,8 +11,7 @@
     <AssemblyKeyContainerName>
     </AssemblyKeyContainerName>
     <AssemblyName>Habanero.Base</AssemblyName>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>key.pfx</AssemblyOriginatorKeyFile>
     <DefaultClientScript>JScript</DefaultClientScript>
     <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
     <DefaultTargetSchema>IE50</DefaultTargetSchema>
@@ -26,6 +25,7 @@
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>bin\Debug\</OutputPath>
@@ -73,10 +73,6 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Blowfish_NET, Version=0.0.0.0, Culture=neutral">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\Blowfish_NET.dll</HintPath>
-    </Reference>
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
@@ -89,10 +85,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssemblyInfo.cs">
+    <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="BlowfishCrypter.cs" />
     <Compile Include="Exceptions\ArgumentValidationHelper.cs" />
     <Compile Include="Exceptions\CannotSaveException.cs">
       <SubType>Code</SubType>
@@ -239,6 +234,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="XMLWrapper.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="key.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
