--- a/trunk/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/trunk/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -124,7 +124,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BoKeyTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -144,6 +143,7 @@
     <Compile Include="Loaders\TestXmlUIFormTabLoader.cs" />
     <Compile Include="Loaders\TestXmlUIGridDefLoader.cs" />
     <Compile Include="Loaders\TestXmlUIGridPropertyLoader.cs" />
+    <Compile Include="TestBoKey.cs" />
     <Compile Include="TestBoMapper.cs">
       <SubType>Code</SubType>
     </Compile>
