Added rule checking for Decimal (why was it missing?) Error messaging + some tests.

--- a/trunk/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/trunk/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -182,6 +182,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="TestPropRuleDate.cs" />
+    <Compile Include="TestPropRuleDecimal.cs" />
+    <Compile Include="TestPropRuleInt.cs" />
     <Compile Include="TestPropRuleString.cs" />
     <Compile Include="TestRelationship.cs" />
     <Compile Include="TestRelationshipCol.cs">
