--- a/trunk/Habanero.Test/Habanero.Test.csproj
+++ b/trunk/Habanero.Test/Habanero.Test.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Sample.cs" />
     <Compile Include="Shape.cs" />
     <Compile Include="TestDelayedMethodCall.cs" />
+    <Compile Include="TestHabaneroStringBuilder.cs" />
     <Compile Include="TestStringGuidPairCollection.cs" />
     <Compile Include="TestUsingDatabase.cs" />
     <Compile Include="TestXmlDocumentValidator.cs" />
