--- a/trunk/Habanero.Test.UI/Habanero.Test.UI.csproj
+++ b/trunk/Habanero.Test.UI/Habanero.Test.UI.csproj
@@ -10,7 +10,7 @@
     <RootNamespace>Habanero.Test.UI</RootNamespace>
     <AssemblyName>Habanero.Test.UI</AssemblyName>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>key.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -88,7 +88,6 @@
     <Compile Include="TestSimpleGrid.cs" />
     <Compile Include="TestSimpleReadOnlyGrid.cs" />
     <Compile Include="TestTextBoxMapper.cs" />
-    <Compile Include="TestTreeViewTableEditor.cs" />
     <Compile Include="TestWizard.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -122,7 +121,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="key.pfx" />
+    <None Include="key.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
