--- a/trunk/Habanero.UI.Std/Habanero.UI.Std.csproj
+++ b/trunk/Habanero.UI.Std/Habanero.UI.Std.csproj
@@ -10,7 +10,7 @@
     <RootNamespace>Habanero.UI.Std</RootNamespace>
     <AssemblyName>Habanero.UI.Std</AssemblyName>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>key.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,7 +39,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="key.pfx" />
+    <None Include="key.snk" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Base\" />
