Mainly changes to the BusinessObjectCollection to improve it's generics usage.  Also started cleaning the interface a little, still more to do.

--- a/trunk/Habanero.Bo/Habanero.Bo.csproj
+++ b/trunk/Habanero.Bo/Habanero.Bo.csproj
@@ -95,6 +95,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Comparer\DateTimeComparer.cs" />
+    <Compile Include="Comparer\GuidComparer.cs" />
+    <Compile Include="Comparer\IntComparer.cs" />
+    <Compile Include="Comparer\SingleComparer.cs" />
+    <Compile Include="Comparer\StringComparer.cs" />
+    <Compile Include="Comparer\TimeSpanComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
