Lots of changes to the structure of BusinessObject mainly.  Can't remember everything that was done, but a lot of BO methods were moved to BOLoader. Still more to move (Sql creation stuff).  Renamed ApplyEdit to Save, CancelEdit to Restore, and all ancillary methods like BeforeApplyEdit.  The BusinessObject public interface is drastically smaller, but there are one or two methods/properties still to go.  A subclass of BusinessObject can now have just a parameterless constructor, so no constructor is necessary.  Comparers were moved from Util to BO as they're used specifically for sorting bo's. BusinessObjectCollection is fully parametrised, inherits from List instead of Collection because we always want our BO's sorted.

--- a/trunk/Habanero.Bo/Habanero.Bo.csproj
+++ b/trunk/Habanero.Bo/Habanero.Bo.csproj
@@ -95,6 +95,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BOLoader.cs" />
+    <Compile Include="BOState.cs" />
     <Compile Include="Comparer\DateTimeComparer.cs" />
     <Compile Include="Comparer\GuidComparer.cs" />
     <Compile Include="Comparer\IntComparer.cs" />
