--- a/trunk/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/trunk/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -157,6 +157,7 @@
     <Compile Include="TestBusinessObjectBase.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TestBusinessObjectCollection.cs" />
     <Compile Include="TestBusinessObjectCollectionDataProvider.cs">
       <SubType>Code</SubType>
     </Compile>
