Done some tests for BusinessObjectLookupListSource.  Also, some more changes to the interfaces, some more stuff made internal etc.

--- a/trunk/Habanero.Bo/Habanero.Bo.csproj
+++ b/trunk/Habanero.Bo/Habanero.Bo.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BOLoader.cs" />
+    <Compile Include="BOPropEventArgs.cs" />
     <Compile Include="BOState.cs" />
     <Compile Include="Comparer\DateTimeComparer.cs" />
     <Compile Include="Comparer\GuidComparer.cs" />
