Column/field no longer require heading/label (derived from property name if missing, de-pascal-case-alized, thanks to Mark for the idea)

--- a/trunk/Habanero.Test/Habanero.Test.csproj
+++ b/trunk/Habanero.Test/Habanero.Test.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ActiveReports.Chart, Version=5.0.0.117, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+    <Reference Include="ActiveReports.Viewer3, Version=5.0.0.117, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+    <Reference Include="ActiveReports3, Version=5.0.0.117, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
     <Reference Include="nmock, Version=1.0.1536.20687, Culture=neutral">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\nmock.dll</HintPath>
@@ -53,6 +56,7 @@
     <Compile Include="Shape.cs" />
     <Compile Include="TestDelayedMethodCall.cs" />
     <Compile Include="TestHabaneroStringBuilder.cs" />
+    <Compile Include="TestStringUtilities.cs" />
     <Compile Include="TestUsingDatabase.cs" />
     <Compile Include="TestXmlDocumentValidator.cs" />
   </ItemGroup>
