Added tests for standard format exceptions (lets hope that does wonders to our test coverage). Added tests for GlobalRegistry and ProgressIndicators

--- a/trunk/Habanero.Test.General/Habanero.Test.General.csproj
+++ b/trunk/Habanero.Test.General/Habanero.Test.General.csproj
@@ -175,6 +175,7 @@
     <Compile Include="TesterContactPersonCompositeKey.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TestExceptions.cs" />
     <Compile Include="TestInheritanceBase.cs">
       <SubType>Code</SubType>
     </Compile>
